Fixed client stats bug, control text overflow styles

--- a/src/less/log.io.less
+++ b/src/less/log.io.less
@@ -128,6 +128,12 @@ body {
 				background-image: -moz-linear-gradient(top, #111, #000);
 				background-image: -ms-linear-gradient(top, #111, #000);
 				background-image: -o-linear-gradient(top, #111, #000);
+
+				.object_name {
+					width: @controlWidth - 50;
+					overflow: hidden;
+				}
+
 			}
 
 			.diode {
@@ -182,6 +188,11 @@ body {
 				background-color: #222;
 				padding: 6px 10px;
 				position: relative;
+
+				.item_name {
+					width: @controlWidth - 50;
+					overflow: hidden;
+				}
 			}
 		}
 	}
